# pip-run

./: .hgtags  .travis.yml  CHANGES.rst  NEWS.rst  README.rst  azure-pipelines.yml  conftest.py  mypy.ini  pip-10-install.py  pip-run.py  py38compat.py  pyproject.toml  pytest.ini  reno.yaml  ruff.toml  setup.cfg  setup.py  tea.yaml  test.py  tox.ini
.github/: FUNDING.yml
docs/: conf.py  history.rst  index.rst
docs/notes/: reno-17f0735ba6ea60d3.yaml
examples/: plotter.ipynb  pydragon  pydragon.py  test-mongodb-covered-query.py
newsfragments/: +0b6b72af.removal.rst  +455b694f.bugfix.rst  +5243c40b.bugfix.rst  +7ba1726f.bugfix.rst  +96.feature.rst  +a2e12a39.removal.rst  +ae197cca.bugfix.rst  +cdec73cc.bugfix.rst  +e16209bd.removal.rst  100.removal.rst  102.bugfix.rst  109.feature.rst  115.feature.rst  118.bugfix.rst  122.bugfix.rst  123.bugfix.rst  51.removal.rst  75.feature.rst  75.removal.rst  76.bugfix.rst  77.feature.rst  78.feature.rst  84.feature.rst  85.feature.rst  97.feature.rst
pip_run/: __init__.py  __main__.py  _py37compat.py  _py38compat.py  commands.py  config.py  deps.py  ephemeral.py  launch.py  persist.py  read-deps.py  scripts.py  text.py  usage.txt
pip_run/compat/: py310.py  py38.py  py39.py
pip_run/mode/: persist.py
pip_run/retention/: __init__.py  destroy.py  persist.py
pip_run/tests/: test_deps.py  test_launch.py  test_scripts.py
rwt/: __init__.py  __main__.py  check_package.py  commands.py  compat.py  deps.py  launch.py  read-deps.py  scripts.py
rwt/tests/: test_deps.py  test_launch.py  test_scripts.py
tests/: test_commands.py  test_deps.py  test_launch.py  test_retention.py  test_scripts.py
