[metadata]
license_files =
	LICENSE
name = pip-run
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = install packages and run Python with them
long_description = file:README.rst
url = https://github.com/jaraco/pip-run
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
py_modules = pip-run
python_requires = >=3.6
install_requires = pip >= 19.3
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.packages.find]
exclude =
        build*
        docs*
        tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black >= 0.3.7; python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; python_implementation != "PyPy"
	pytest-enabler

	# local
	nbformat
	pygments

docs =
	# upstream
	sphinx
	jaraco.packaging >= 8.2
	rst.linker >= 1.9

	# local

[options.entry_points]
console_scripts =
	pip-run = pip_run:run
