[metadata]
name = pip-run
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = install packages and run Python with them
long_description = file:README.rst
url = https://github.com/jaraco/pip-run
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
py_modules = pip-run
python_requires = >=3.7
install_requires =
	pip >= 19.3
	autocommand
	path >= 15.1
	importlib_metadata; python_version < "3.8"
	packaging
	more_itertools >= 8.3
	jaraco.context
	jaraco.text

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*
	examples

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-flake8; \
		# workaround for tholo/pytest-flake8#87
		python_version < "3.12"
	# workaround for tholo/pytest-flake8#87
	flake8 < 5
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.3

	# local
	nbformat
	pygments
	jaraco.path

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9
	rst.linker >= 1.9
	furo
	sphinx-lint

	# tidelift
	jaraco.tidelift >= 1.4

	# local

[options.entry_points]
console_scripts =
	pip-run = pip_run:run
