[metadata]
name = pip-run
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = install packages and run Python with them
long_description = file:README.rst
url = https://github.com/jaraco/pip-run
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
py_modules = pip-run
python_requires = >=3.8
install_requires =
	pip >= 19.3
	autocommand
	path >= 15.1
	packaging
	more_itertools >= 8.3
	jaraco.context
	jaraco.text
	platformdirs
	importlib_resources; python_version < "3.9"
	jaraco.functools >= 3.7
	jaraco.env

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*
	examples

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local
	nbformat
	pygments
	jaraco.path
	jaraco.test >= 5.3
	flit-core

docs =
	# upstream
	sphinx >= 3.5
	# workaround for sphinx/sphinx-doc#11662
	sphinx < 7.2.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# tidelift
	jaraco.tidelift >= 1.4

	# local

[options.entry_points]
console_scripts =
	pip-run = pip_run:run
